force-app/main/default/objects/Quote_Document_Fact__c/Quote_Document_Fact__c.object-meta.xml
<CustomObject>
    <description
  >A typed, persisted document header or party value. Facts use semantic codes instead of Salesforce field API names so any output service can render the same validated snapshot.</description>
    <label>Quote Document Fact</label>
    <nameField>
        <displayFormat>QDF-{0000000000}</displayFormat>
        <label>Fact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Document Facts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>