force-app/main/default/objects/Quote_Document_Fact__c/fields/Boolean_Value__c.field-meta.xml
<CustomField>
    <fullName>Boolean_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True or false value when Data Type is Boolean.</inlineHelpText>
    <label>Boolean Value</label>
    <type>Checkbox</type>
</CustomField>