force-app/main/default/objects/Quote_Document_Fact__c/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <inlineHelpText>ISO currency code for a Currency fact.</inlineHelpText>
    <label>Currency Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>