force-app/main/default/objects/Quote_Document_Fact__c/fields/Currency_Value__c.field-meta.xml
<CustomField>
    <fullName>Currency_Value__c</fullName>
    <inlineHelpText>Money value when Data Type is Currency. Currency Code identifies its currency explicitly.</inlineHelpText>
    <label>Currency Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>