force-app/main/default/objects/Quote_Document_Fact__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <inlineHelpText>Which typed value field contains the fact and how an output service formats it.</inlineHelpText>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text</fullName><default>false</default><label>Text</label></value>
            <value><fullName>Address</fullName><default>false</default><label>Address</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
            <value><fullName>Currency</fullName><default>false</default><label>Currency</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>DateTime</fullName><default>false</default><label>Date and Time</label></value>
            <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>