force-app/main/default/objects/Quote_Document_Fact__c/fields/Date_Value__c.field-meta.xml
<CustomField>
    <fullName>Date_Value__c</fullName>
    <inlineHelpText>Date value when Data Type is Date.</inlineHelpText>
    <label>Date Value</label>
    <type>Date</type>
</CustomField>