force-app/main/default/objects/Quote_Document_Fact__c/fields/Datetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Datetime_Value__c</fullName>
    <inlineHelpText>Date and time value when Data Type is DateTime.</inlineHelpText>
    <label>Date and Time Value</label>
    <type>DateTime</type>
</CustomField>