force-app/main/default/objects/Quote_Document_Fact__c/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <inlineHelpText>Resolved customer-facing label in the document locale.</inlineHelpText>
    <label>Display Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>