force-app/main/default/objects/Quote_Document_Fact__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <inlineHelpText>Stable order for facts when an output service presents them as a header or key-value group.</inlineHelpText>
    <label>Display Order</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>