force-app/main/default/objects/Quote_Document_Fact__c/fields/Fact_Code__c.field-meta.xml
<CustomField>
    <fullName>Fact_Code__c</fullName>
    <inlineHelpText>Stable semantic identity such as CUSTOMER_NAME or QUOTE_EXPIRATION_DATE. Output services use this code and never a Salesforce source-field name.</inlineHelpText>
    <label>Fact Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>