force-app/main/default/objects/Quote_Document_Fact__c/fields/Number_Value__c.field-meta.xml
<CustomField>
    <fullName>Number_Value__c</fullName>
    <inlineHelpText>Numeric value when Data Type is Number.</inlineHelpText>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>