force-app/main/default/objects/Quote_Document_Fact__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <inlineHelpText>The Quote whose generated document snapshot owns this fact.</inlineHelpText>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Document Facts</relationshipLabel>
    <relationshipName>Document_Facts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>