force-app/main/default/objects/Quote_Document_Fact__c/fields/Source_Identity__c.field-meta.xml
<CustomField>
    <fullName>Source_Identity__c</fullName>
    <inlineHelpText>Stable description of the approved source and version used to produce this fact.</inlineHelpText>
    <label>Source Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>