force-app/main/default/objects/Quote_Document_Fact__c/fields/Text_Value__c.field-meta.xml
<CustomField>
    <fullName>Text_Value__c</fullName>
    <inlineHelpText>Text or address value when Data Type is Text or Address.</inlineHelpText>
    <label>Text Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>